--- a/index.html
+++ b/index.html
@@ -4,11 +4,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LPPWDFI</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+    <header class="bg-gradient">
+        <div class="container d-flex align-items-center">
+            <div class="menu-icon mr-3">&#9776;</div>
+            <img src="/Branding-Guidelines/LPPWDFI-Logo.png" alt="Logo" class="logo mr-3">
+            <div>
+                <h1 class="h4 mb-0">LPPWDFI</h1>
+                <p class="mb-0">Las Pinas Persons With Disabilities Federation Inc.</p>
+            </div>
+        </div>
+    </header>
+    <main class="container text-center mt-5">
+        <h2>Welcome to your Dashboard!</h2>
+        <div class="search-container my-4">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for anything....">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button">
+                        <img src="search-icon.png" alt="Search">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <img src="programs-icon.png" alt="Programs" class="mb-3">
+                        <h5 class="card-title">Programs</h5>
+                        <p class="card-text">View or create appointments</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <img src="beneficiary-icon.png" alt="Beneficiary" class="mb-3">
+                        <h5 class="card-title">Beneficiary</h5>
+                        <p class="card-text">View or create appointments</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <img src="benefactor-icon.png" alt="Benefactor" class="mb-3">
+                        <h5 class="card-title">Benefactor</h5>
+                        <p class="card-text">View or create appointments</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <img src="inventory-icon.png" alt="Inventory" class="mb-3">
+                        <h5 class="card-title">Inventory</h5>
+                        <p class="card-text">View or create appointments</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <img src="summary-icon.png" alt="Summary" class="mb-3">
+                        <h5 class="card-title">Summary</h5>
+                        <p class="card-text">View or create appointments</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <img src="settings-icon.png" alt="Settings" class="mb-3">
+                        <h5 class="card-title">Settings</h5>
+                        <p class="card-text">View or create appointments</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
