--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="bg-gradient">
         <div class="container d-flex align-items-center">
             <div class="menu-icon mr-3">&#9776;</div>
-            <img src="/Branding-Guidelines/LPPWDFI-Logo.png" alt="Logo" class="logo mr-3">
+            <img src="../CSSWENG-G1-1/Branding-Guidelines/LPPWDFI-Logo.png" alt="Logo" class="logo mr-3">
             <div>
                 <h1 class="h4 mb-0">LPPWDFI</h1>
                 <p class="mb-0">Las Pinas Persons With Disabilities Federation Inc.</p>
