--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -25,19 +26,18 @@
                 <li class="dropdown">
                     <a href="#programs" class="dropdown-toggle" data-toggle="dropdown">Programs<span class="caret"></span></a>
                     <ul class="dropdown-menu animated fadeInLeft" role="menu">
-                        <div class="dropdown-header">Dropdown heading</div>
-                        <li><a href="#pictures">Pictures</a></li>
-                        <li><a href="#videos">Videos</a></li>
-                        <li><a href="#books">Books</a></li>
-                        <li><a href="#art">Art</a></li>
-                        <li><a href="#awards">Awards</a></li>
+                        <li><a href="#pictures">Program 1</a></li>
+                        <li><a href="#videos">Program 2</a></li>
+                        <li><a href="#books">Program 3</a></li>
+                        <li><a href="#art">Program 4</a></li>
+                        <li><a href="#awards">Program 4</a></li>
                     </ul>
                 </li>
                 <li><a href="#beneficiary">Beneficiary</a></li>
                 <li><a href="#benefactor">Benefactor</a></li>
                 <li><a href="#inventory">Inventory</a></li>
                 <li><a href="#settings">Settings</a></li>
-                <li><a href="#followme">Follow me</a></li>
+                <li><a href="#followme"><i class="bi bi-box-arrow-right"></i>  Logout</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
@@ -50,81 +50,84 @@
                     <img src="../CSSWENG-G1-1/Branding-Guidelines/LPPWDFI-Logo.png" alt="Logo" class="logo mr-3">
                     <div>
                         <h1 class="org-name">LPPWDFI</h1>
-                        <p class="mb-0">Las Pinas Persons With Disabilities Federation Inc.</p>
+                        <p class="mb-0">Las Pinas Persons With<br>Disabilities Federation Inc.</p>
                     </div>
+                    <hr class="solid">
                 </div>
             </header>
 
-            <main class="container text-center mt-5">
-                <h2 class="welcome-title">Welcome to your Dashboard!</h2>
-                <div class="search-container my-4">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for anything....">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">
+            <div class="container">
+                <main class="container text-center mt-5">
+                    <h2 class="welcome-title">Welcome to your Dashboard!</h2>
+                    <div class="search-container my-4">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search for anything....">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="button">
                                 <i class="bi bi-search"></i>
                             </button>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="card-body text-center">
-                                <img src="../CSSWENG-G1-1/Branding-Guidelines/program-icon.png" alt="Programs" class="mb-3">
-                                <h5 class="card-title">Programs</h5>
-                                <p class="card-text">View or create appointments</p>
+                    <div class="row">
+                        <div class="col-md-4 mb-4">
+                            <div class="card h-100">
+                                <div class="card-body text-center">
+                                    <img src="../CSSWENG-G1-1/Branding-Guidelines/program-icon.png" alt="Programs" class="mb-3">
+                                    <h5 class="card-title">Programs</h5>
+                                    <p class="card-text">View or create appointments</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card h-100">
+                                <div class="card-body text-center">
+                                    <img src="../CSSWENG-G1-1/Branding-Guidelines/beneficiary-icon.png" alt="Beneficiary" class="mb-3">
+                                    <h5 class="card-title">Beneficiary</h5>
+                                    <p class="card-text">View or create appointments</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card h-100">
+                                <div class="card-body text-center">
+                                    <img src="../CSSWENG-G1-1/Branding-Guidelines/benfactor-icon.png" alt="Benefactor" class="mb-3">
+                                    <h5 class="card-title">Benefactor</h5>
+                                    <p class="card-text">View or create appointments</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card h-100">
+                                <div class="card-body text-center">
+                                    <img src="../CSSWENG-G1-1/Branding-Guidelines/inventory-icon.png" alt="Inventory" class="mb-3">
+                                    <h5 class="card-title">Inventory</h5>
+                                    <p class="card-text">View or create appointments</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card h-100">
+                                <div class="card-body text-center">
+                                    <img src="../CSSWENG-G1-1/Branding-Guidelines/summary-icon.png" alt="Summary" class="mb-3">
+                                    <h5 class="card-title">Summary</h5>
+                                    <p class="card-text">View or create appointments</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card h-100">
+                                <div class="card-body text-center">
+                                    <img src="../CSSWENG-G1-1/Branding-Guidelines/settings-icon.png" alt="Settings" class="mb-3">
+                                    <h5 class="card-title">Settings</h5>
+                                    <p class="card-text">View or create appointments</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="card-body text-center">
-                                <img src="../CSSWENG-G1-1/Branding-Guidelines/beneficiary-icon.png" alt="Beneficiary" class="mb-3">
-                                <h5 class="card-title">Beneficiary</h5>
-                                <p class="card-text">View or create appointments</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="card-body text-center">
-                                <img src="../CSSWENG-G1-1/Branding-Guidelines/benfactor-icon.png" alt="Benefactor" class="mb-3">
-                                <h5 class="card-title">Benefactor</h5>
-                                <p class="card-text">View or create appointments</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="card-body text-center">
-                                <img src="../CSSWENG-G1-1/Branding-Guidelines/inventory-icon.png" alt="Inventory" class="mb-3">
-                                <h5 class="card-title">Inventory</h5>
-                                <p class="card-text">View or create appointments</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="card-body text-center">
-                                <img src="../CSSWENG-G1-1/Branding-Guidelines/summary-icon.png" alt="Summary" class="mb-3">
-                                <h5 class="card-title">Summary</h5>
-                                <p class="card-text">View or create appointments</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="card-body text-center">
-                                <img src="../CSSWENG-G1-1/Branding-Guidelines/settings-icon.png" alt="Settings" class="mb-3">
-                                <h5 class="card-title">Settings</h5>
-                                <p class="card-text">View or create appointments</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </main>
+                </main>
+            </div>
         </div>
     </div>
 
