--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 <div class="sidebar-header">
                     <div class="sidebar-brand">
                         <a href="#">Admin</a>
+                        <hr class="navbar-solid">
                     </div>
                 </div>
+
                 <li><a href="#dashboard">Dashboard</a></li>
                 <li class="dropdown">
                     <a href="#programs" class="dropdown-toggle" data-toggle="dropdown">Programs<span class="caret"></span></a>
@@ -37,7 +39,7 @@
                 <li><a href="#benefactor">Benefactor</a></li>
                 <li><a href="#inventory">Inventory</a></li>
                 <li><a href="#settings">Settings</a></li>
-                <li><a href="#followme"><i class="bi bi-box-arrow-right"></i>  Logout</a></li>
+                <li class="logout-link"><a href="#logout"><i class="bi bi-box-arrow-right"></i>  Logout</a></li>
             </ul>
         </nav>
         <!-- /#sidebar-wrapper -->
@@ -52,7 +54,7 @@
                         <h1 class="org-name">LPPWDFI</h1>
                         <p class="mb-0">Las Pinas Persons With<br>Disabilities Federation Inc.</p>
                     </div>
-                    <hr class="solid">
+                    <hr class="vertical-solid">
                 </div>
             </header>
 
